--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,19 @@
   <script src="https://kit.fontawesome.com/43d9f158ac.js" crossorigin="anonymous"></script>
   <meta charset="utf-8">
   <title> Appartment Management Helper </title>
+  <link rel="stylesheet" href="..\static\style.css" />
 </head>
 <body>
-  {% block content %}
-  {% endblock %}
+  <div id="content">
+    <div id="spacing">
+      <header>
+        <h1>Appartment Management Solutions</h1>
+      </header>
+      {% block content %}
+      {% endblock %}
+      <footer>
+        Ian Wyse - Nicola Sisca - 2022
+      </footer>
+    </div>
+  </div>
 </body>
