--- a/templates/tenants.html
+++ b/templates/tenants.html
@@ -9,6 +9,8 @@
         <th>Age</th>
         <th>PhoneNumber</th>
         <th>Balance</th>
+        <th>Edit</th>
+        <th>Delete</th>
       </thead>
     </table>
     <button> New Row </button>
@@ -44,7 +46,7 @@
           let table = event.target.parentElement.parentElement.parentElement.parentElement
           let id = row.cells[0].innerText
           let id_name = table.rows[0].cells[0].innerText
-          const response = await fetch(`buildings/delete/${id_name}/${id}`, {method:"GET"})
+          const response = await fetch(`tenants/delete/${id_name}/${id}`, {method:"GET"})
           const resp = response.json()
           .then(resp => {
             to_delete = document.getElementById("tablebody").remove()
