--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,33 @@
   <div id="content">
     <div id="spacing">
       <header>
-        <h1>Appartment Management Solutions</h1>
+        <nav>
+          <h1>Appartment Management Solutions</h1>
+          <a class="link" href="/">
+            Home
+          </a>
+          <a class="link" href="/buildings">
+            Buildings
+          </a>
+          <a class="link" href="/unittypes">
+            Types of Units
+          </a>
+          <a class="link" href="/units">
+            Units
+          </a>
+          <a class="link" href="/tenants">
+            Tenants
+          </a>
+          <a class="link" href="/rentedunits">
+            Rented Units
+          </a>
+          <a class="link" href="/maintenance">
+            Maintenance
+          </a>
+          <a class="link" href="/payments">
+            Payments
+          </a>
+        </nav>
       </header>
       {% block content %}
       {% endblock %}
