--- a/static/style.css
+++ b/static/style.css
@@ -31,6 +31,45 @@ h1{
   display: inline;
 }
 
+h3{
+  font-size: 26pt;
+  text-align: center;
+}
+
+h4{
+  font-size: 22pt;
+  text-align: center;
+}
+
+p{
+  text-align: center;
+  font-size: 18pt;
+}
+
+.inputblock{
+  display:flex;
+  flex-direction: column;
+}
+
+.inputrow{
+  display:block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+button{
+  margin: 3px;
+  margin-bottom: 10px;
+}
+
+input{
+  display: inline-block;
+}
+
+label{
+  display: inline-block;
+}
+
 #content{
   position: relative;
   min-height: 99vh;
