--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,10 @@
 {% extends 'base.html'%}
   {% block content %}
-    <h3> Welcome to the Appartment Management Helper </h3>
-    <p>Click on any of the links above to view and edit your appartment's data.</p>
+    <h3> Welcome to the Apartment Management Helper </h3>
+    <p>Click on any of the links above to view and edit your apartment's data.</p>
     <h4> OR </h4>
     <p>Search for tenant information by name.</p>
+    <h3> NOTE TO REVIEWERS! CLICKING DELETE WILL DELETE DATA! DON'T DELETE ALL THE DATA! </h3>
     <div class="inputblock">
       <div class="inputrow">
         <label>First Name:</label>
