--- a/static/style.css
+++ b/static/style.css
@@ -99,6 +99,16 @@ tr:nth-child(even) {
   background-color: #dddddd;
 }
 
+.dropcell{
+  padding: 0;
+}
+
+.dropdown{
+  font-size: 100%;
+  width: 100%;
+  min-height: 100%;
+  line-height: 100%
+}
 
 button{
   display: block;
