--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
   <script src="https://kit.fontawesome.com/43d9f158ac.js" crossorigin="anonymous"></script>
   <meta charset="utf-8">
-  <title> Appartment Management Helper </title>
+  <title> Apartment Management Helper </title>
   <link rel="stylesheet" href="..\static\style.css" />
 </head>
 <body>
@@ -11,7 +11,7 @@
     <div id="spacing">
       <header>
         <nav>
-          <h1>Appartment Management Solutions</h1>
+          <h1>Apartment Management Solutions</h1>
           <a class="link" href="/">
             Home
           </a>
@@ -35,6 +35,9 @@
           </a>
           <a class="link" href="/payments">
             Payments
+          </a>
+          <a class="link" href="/tenantinformation">
+            Tenant Information
           </a>
         </nav>
       </header>
