--- a/templates/tenantinformation.html
+++ b/templates/tenantinformation.html
@@ -10,7 +10,7 @@
         <th>Delete</th>
       </thead>
     </table>
-    <button> New Row </button>
+    <button onclick="location.href='./tenantinformation/new'"> New Row </button>
     <script>
 
         let input_data = {{table | safe}}
@@ -28,8 +28,7 @@
               tableRow.appendChild(tableCell)
             }
             let editCell = document.createElement("td")
-            editCell.innerHTML = "<i class='fa-solid fa-file-pen'></i>"
-            editCell.addEventListener("click", editRow)
+            editCell.innerHTML = "<i class='fa-solid fa-file-pen' onclick='editRow(event)'></i>"
             tableRow.appendChild(editCell)
             let deleteCell = document.createElement("td");
             deleteCell.innerHTML = "<i class='fa-solid fa-trash' onclick='deleteRow(event)'></i>"
@@ -52,7 +51,13 @@
         }
 
         function editRow(){
-          console.log("not yet implemented")
+          let row = event.target.parentElement.parentElement
+          let row_list = []
+          for (let cell of row.cells) {
+            row_list.push(cell.innerText)
+          }
+          row_list = JSON.stringify(row_list.slice(0,-2))
+          location.href = "/tenantinformation/update?data=" + row_list
         }
 
         makeTable(input_data)
