--- a/templates/unittypesEdit.html
+++ b/templates/unittypesEdit.html
@@ -3,21 +3,23 @@
     <h2> Edit Unit Type </h2>
     <table id=datatable>
       <thead>
+        <th>Unit Type ID</th>
         <th>Type</th>
       </thead>
       <tbody>
         <tr id="editrow">
+          <td></td>
           <td contenteditable="true"></td>
         </tr>
       </tbody>
     </table>
-    <button> Submit </button>
+    <button onclick="makeRow()"> Submit </button>
     <script>
       let current = {{current | safe}}
 
       function init(){
         const edit_row = document.getElementById("editrow")
-        let i = 1
+        let i = 0
         for (let cell of edit_row.cells) {
           if (cell.className !== "dropcell"){
             cell.innerText = current[i]
@@ -27,6 +29,31 @@
           }
           i += 1
         }
+      }
+
+      function makeRow(){
+        const row = document.getElementById("editrow")
+        let i = 0
+        let values = []
+        for (let cell of row.cells) {
+          if (cell.className === "dropcell" || cell.className === "datecell"){
+            values.push(cell.childNodes[1].value)
+          }
+          else {values.push(cell.innerText)}
+          i += 1
+        }
+        sendToDatabase(values)
+      }
+
+      async function sendToDatabase(values) {
+        resp = await fetch("/unittypes", {
+          method:"PUT",
+          headers:{'Content-Type': 'application/json' },
+          body: JSON.stringify({values})
+        })
+        .then((resp) => {
+          location.href = resp.url
+        })
       }
 
       init()
