--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,6 @@
     <p>Click on any of the links above to view and edit your apartment's data.</p>
     <h4> OR </h4>
     <p>Search for tenant information by name.</p>
-    <h3> NOTE TO REVIEWERS! CLICKING DELETE WILL DELETE DATA! DON'T DELETE ALL THE DATA! </h3>
     <div class="inputblock">
       <div class="inputrow">
         <label>First Name:</label>
@@ -32,13 +31,12 @@
     <script>
 
       async function search() {
-        console.log(document.getElementById("first_name"))
         first_name = document.getElementById("first_name").value
         last_name = document.getElementById("last_name").value
         const response = await fetch(`/search/${first_name}/${last_name}`, {method:"GET"})
         const resp = response.json()
         .then(resp => {
-          to_delete = document.getElementById("tablebody").remove()
+          document.getElementById("tablebody").remove()
           makeTable(resp)
         })
       }
