--- a/templates/maintenance.html
+++ b/templates/maintenance.html
@@ -5,11 +5,13 @@
     <table id=datatable>
       <thead>
         <th>RequestID</th>
-        <th>UnitID</th>
-        <th>TenantID</th>
-        <th>RequestDate</th>
+        <th>Apt Num</th>
+        <th>Building</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Request Date</th>
         <th>Completed</th>
-        <th>RequestNote</th>
+        <th>Request Note</th>
         <th>Edit</th>
         <th>Delete</th>
       </thead>
@@ -49,19 +51,14 @@
           const response = await fetch(`maintenance/delete/${id_name}/${id}`, {method:"GET"})
           const resp = response.json()
           .then(resp => {
-            to_delete = document.getElementById("tablebody").remove()
+            document.getElementById("tablebody").remove()
             makeTable(resp)
           })
         }
 
         function editRow(){
-          let row = event.target.parentElement.parentElement
-          let row_list = []
-          for (let cell of row.cells) {
-            row_list.push(cell.innerText)
-          }
-          row_list = JSON.stringify(row_list.slice(0,-2))
-          location.href = "/maintenance/update?data=" + row_list
+          let id = event.target.parentElement.parentElement.cells[0].innerText
+          location.href = "/maintenance/update?data=" + id
         }
 
         makeTable(input_data)
