--- a/templates/maintenanceEdit.html
+++ b/templates/maintenanceEdit.html
@@ -3,26 +3,29 @@
     <h2> Edit Maintenance Request </h2>
     <table id=datatable>
       <thead>
-        <th>UnitID</th>
-        <th>TenantID</th>
-        <th>RequestDate</th>
+        <th>Request ID</th>
+        <th>Unit ID</th>
+        <th>Tenant ID</th>
+        <th>Request Date</th>
         <th>Completed</th>
-        <th>RequestNote</th>
+        <th>Request Note</th>
       </thead>
       <tbody>
         <tr id=editrow>
-          <td contenteditable="true"></td>
+          <td></td>
+          <td class="dropcell"> <select name="units" class="dropdown" id="units" value="" /> </td>
           <td class="dropcell"> <select name="tenants" class="dropdown" id="tenants" value="" /> </td>
-          <td contenteditable="true"></td>
+          <td class="datecell"> <input type="date" id="requestdate" class="datepicker"/> </td>
           <td contenteditable="true"></td>
           <td contenteditable="true"></td>
         </tr>
       </tbody>
     </table>
-    <button> Submit </button>
+    <button onclick="makeRow()"> Submit </button>
     <script>
     let current = {{current | safe}}
     let tenantIds = {{tenants | safe}}
+    let unitIds = {{units | safe }}
 
     function makeDropdown(list, id){
       dropdown = document.getElementById(id)
@@ -40,19 +43,45 @@
 
     function init(){
       const edit_row = document.getElementById("editrow")
-      let i = 1
+      let i = 0
       for (let cell of edit_row.cells) {
-        if (cell.className !== "dropcell"){
-          cell.innerText = current[i]
+        if (cell.className === "dropcell" || cell.className === "datecell"){
+          cell.childNodes[1].value = current[i]
         }
         else {
-          document.getElementById("tenants").value = current[i]
+          cell.innerText = current[i]
         }
         i += 1
       }
     }
 
+    function makeRow(){
+      const row = document.getElementById("editrow")
+      let i = 0
+      let values = []
+      for (let cell of row.cells) {
+        if (cell.className === "dropcell" || cell.className === "datecell"){
+          values.push(cell.childNodes[1].value)
+        }
+        else {values.push(cell.innerText)}
+        i += 1
+      }
+      sendToDatabase(values)
+    }
+
+    async function sendToDatabase(values) {
+      resp = await fetch("/maintenance", {
+        method:"PUT",
+        headers:{'Content-Type': 'application/json' },
+        body: JSON.stringify({values})
+      })
+      .then((resp) => {
+        location.href = resp.url
+      })
+    }
+
     makeDropdown(tenantIds, "tenants")
+    makeDropdown(unitIds, "units")
     init()
 
     </script>
