--- a/templates/paymentsEdit.html
+++ b/templates/paymentsEdit.html
@@ -1,41 +1,43 @@
 {% extends 'base.html'%}
   {% block content %}
-    <h2> Add New Payment </h2>
+    <h2> Edit Past Payment Information </h2>
     <table id=datatable>
       <thead>
+        <th>Payment ID</th>
         <th>Date</th>
         <th>Amount</th>
-        <th>UnitID</th>
-        <th>TenantID</th>
+        <th>Unit ID</th>
+        <th>Tenant ID</th>
       </thead>
       <tbody>
         <tr id="editrow">
+          <td> </td>
+          <td class="datecell"> <input type="date" id="paymentdate" class="datepicker"/> </td>
           <td contenteditable="true"></td>
-          <td contenteditable="true"></td>
-          <td contenteditable="true"></td>
+          <td class="dropcell"> <select name="units" class="dropdown" id="units" /> </td>
           <td class="dropcell"> <select name="tenants" class="dropdown" id="tenants" /> </td>
         </tr>
       </tbody>
     </table>
-    <button> Submit </button>
+    <button onclick="makeRow()"> Submit </button>
     <script>
       let tenantIds = {{tenants | safe}}
+      let unitIds = {{units | safe}}
       let current = {{current | safe}}
 
       function init(){
         const edit_row = document.getElementById("editrow")
-        let i = 1
+        let i = 0
         for (let cell of edit_row.cells) {
-          if (cell.className !== "dropcell"){
-            cell.innerText = current[i]
+          if (cell.className === "dropcell" || cell.className === "datecell"){
+            cell.childNodes[1].value = current[i]
           }
           else {
-            document.getElementById("tenants").value = current[i]
+            cell.innerText = current[i]
           }
           i += 1
         }
       }
-
 
       function makeDropdown(list, id){
         dropdown = document.getElementById(id)
@@ -51,6 +53,39 @@
         }
       }
 
+      function makeRow(){
+        const row = document.getElementById("editrow")
+        let i = 0
+        let values = []
+        for (let cell of row.cells) {
+          if (cell.className === "dropcell" || cell.className === "datecell"){
+            values.push(cell.childNodes[1].value)
+          }
+          else {
+            if (cell.innerText == "") {
+              values.push("null")
+            }
+            else {
+              values.push(cell.innerText)
+            }
+          }
+          i += 1
+        }
+        sendToDatabase(values)
+      }
+
+      async function sendToDatabase(values) {
+        resp = await fetch("/payments", {
+          method:"PUT",
+          headers:{'Content-Type': 'application/json' },
+          body: JSON.stringify({values})
+        })
+        .then((resp) => {
+          location.href = resp.url
+        })
+      }
+
+      makeDropdown(unitIds, "units")
       makeDropdown(tenantIds, "tenants")
       init()
     </script>
