--- a/templates/rentedunits.html
+++ b/templates/rentedunits.html
@@ -4,14 +4,17 @@
     <table id=datatable>
       <thead>
         <th>RentalID</th>
-        <th>UnitID</th>
-        <th>TenantID</th>
-        <th>StartDate</th>
+        <th>Apt Num</th>
+        <th>Building</th>
+        <th>Unit Type</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Start Date</th>
         <th>Edit</th>
         <th>Delete</th>
       </thead>
     </table>
-    <button onclick="location.href='./payments/new'"> New Row </button>
+    <button onclick="location.href='./rentedunits/new'"> New Row </button>
     <script>
 
         let input_data = {{table | safe}}
@@ -46,19 +49,14 @@
           const response = await fetch(`rentedunits/delete/${id_name}/${id}`, {method:"GET"})
           const resp = response.json()
           .then(resp => {
-            to_delete = document.getElementById("tablebody").remove()
+            document.getElementById("tablebody").remove()
             makeTable(resp)
           })
         }
 
         function editRow(){
-          let row = event.target.parentElement.parentElement
-          let row_list = []
-          for (let cell of row.cells) {
-            row_list.push(cell.innerText)
-          }
-          row_list = JSON.stringify(row_list.slice(0,-2))
-          location.href = "/rentedunits/update?data=" + row_list
+          let id = event.target.parentElement.parentElement.cells[0].innerText
+          location.href = "/rentedunits/update?data=" + id
         }
 
         makeTable(input_data)
