--- a/templates/rentedunitsEdit.html
+++ b/templates/rentedunitsEdit.html
@@ -3,37 +3,40 @@
     <h2> Edit Rented Unit </h2>
     <table id=datatable>
       <thead>
+        <th>RentalID</th>
         <th>UnitID</th>
         <th>TenantID</th>
         <th>StartDate</th>
       </thead>
       <tbody>
         <tr id="editrow">
-          <td contenteditable="true"></td>
+          <td> </td>
+          <td class="dropcell"> <select name="units" class="dropdown" id="units" /> </td>
           <td class="dropcell"> <select name="tenants" class="dropdown" id="tenants" /> </td>
-          <td contenteditable="true"></td>
+          <td class="datecell"> <input type="date" id="start" class="datepicker"/> </td>
         </tr>
       </tbody>
     </table>
-    <button> Submit </button>
+    <button onclick="makeRow()"> Submit </button>
     <script>
       let tenantIds = {{tenants | safe}}
       let current = {{current | safe}}
+      let unitIds = {{units | safe}}
 
       function init(){
+        console.log(current)
         const edit_row = document.getElementById("editrow")
-        let i = 1
+        let i = 0
         for (let cell of edit_row.cells) {
-          if (cell.className !== "dropcell"){
-            cell.innerText = current[i]
+          if (cell.className === "dropcell" || cell.className === "datecell"){
+            cell.childNodes[1].value = current[i]
           }
           else {
-            document.getElementById("tenants").value = current[i]
+            cell.innerText = current[i]
           }
           i += 1
         }
       }
-
 
       function makeDropdown(list, id){
         dropdown = document.getElementById(id)
@@ -49,6 +52,32 @@
         }
       }
 
+      function makeRow(){
+        const row = document.getElementById("editrow")
+        let i = 0
+        let values = []
+        for (let cell of row.cells) {
+          if (cell.className === "dropcell" || cell.className === "datecell"){
+            values.push(cell.childNodes[1].value)
+          }
+          else {values.push(cell.innerText)}
+          i += 1
+        }
+        sendToDatabase(values)
+      }
+
+      async function sendToDatabase(values) {
+        resp = await fetch("/rentedunits", {
+          method:"PUT",
+          headers:{'Content-Type': 'application/json' },
+          body: JSON.stringify({values})
+        })
+        .then((resp) => {
+          location.href = resp.url
+        })
+      }
+
+      makeDropdown(unitIds, "units")
       makeDropdown(tenantIds, "tenants")
       init()
     </script>
