--- a/templates/tenantsEdit.html
+++ b/templates/tenantsEdit.html
@@ -1,16 +1,18 @@
 {% extends 'base.html'%}
   {% block content %}
-    <h2> Edit Private Tenant Information </h2>
+    <h2> Edit Tenant Information </h2>
     <table id=datatable>
       <thead>
-        <th>FirstName</th>
-        <th>LastName</th>
+        <th>Tenant ID</th>
+        <th>First Name</th>
+        <th>Last Name</th>
         <th>Age</th>
-        <th>PhoneNumber</th>
+        <th>Phone Number</th>
         <th>Balance</th>
       </thead>
       <tbody>
         <tr id="editrow">
+          <td> </td>
           <td contenteditable="true"></td>
           <td contenteditable="true"></td>
           <td contenteditable="true"></td>
@@ -19,13 +21,13 @@
         </tr>
       </tbody>
     </table>
-    <button> Submit </button>
+    <button onclick="makeRow()"> Submit </button>
     <script>
       let current = {{current | safe}}
 
       function init(){
         const edit_row = document.getElementById("editrow")
-        let i = 1
+        let i = 0
         for (let cell of edit_row.cells) {
           if (cell.className !== "dropcell"){
             cell.innerText = current[i]
@@ -35,6 +37,38 @@
           }
           i += 1
         }
+      }
+
+      function makeRow(){
+        const row = document.getElementById("editrow")
+        let i = 0
+        let values = []
+        for (let cell of row.cells) {
+          if (cell.className === "dropcell" || cell.className === "datecell"){
+            values.push(cell.childNodes[1].value)
+          }
+          else {
+            if (cell.innerText == "") {
+              values.push("null")
+            }
+            else {
+              values.push(cell.innerText)
+            }
+          }
+          i += 1
+        }
+        sendToDatabase(values)
+      }
+
+      async function sendToDatabase(values) {
+        resp = await fetch("/tenants", {
+          method:"PUT",
+          headers:{'Content-Type': 'application/json' },
+          body: JSON.stringify({values})
+        })
+        .then((resp) => {
+          location.href = resp.url
+        })
       }
 
       init()
