--- a/templates/unitsEdit.html
+++ b/templates/unitsEdit.html
@@ -3,6 +3,8 @@
     <h2> Edit Unit Information </h2>
     <table id=datatable>
       <thead>
+        <th>UnitID</th>
+        <th>Unit Number</th>
         <th>Price</th>
         <th>Rented</th>
         <th>Note</th>
@@ -11,6 +13,8 @@
       </thead>
       <tbody>
         <tr id="editrow">
+          <td></td>
+          <td contenteditable="true"></td>
           <td contenteditable="true"></td>
           <td contenteditable="true"></td>
           <td contenteditable="true"></td>
@@ -19,7 +23,7 @@
         </tr>
       </tbody>
     </table>
-    <button> Submit </button>
+    <button onclick="makeRow()"> Submit </button>
     <script>
       let buildingIds = {{buildings | safe}}
       let typesIds = {{types | safe}}
@@ -27,7 +31,7 @@
 
       function init(){
         const edit_row = document.getElementById("editrow")
-        let i = 1
+        let i = 0
         for (let cell of edit_row.cells) {
           if (cell.className ==! "dropcell"){
             cell.innerText = current[i]
@@ -38,7 +42,6 @@
           i += 1
         }
       }
-
 
       function makeDropdown(list, id){
         dropdown = document.getElementById(id)
@@ -52,6 +55,31 @@
           drop.innerText = text
           dropdown.appendChild(drop)
         }
+      }
+
+      function makeRow(){
+        const row = document.getElementById("editrow")
+        let i = 0
+        let values = []
+        for (let cell of row.cells) {
+          if (cell.className === "dropcell" || cell.className === "datecell"){
+            values.push(cell.childNodes[1].value)
+          }
+          else {values.push(cell.innerText)}
+          i += 1
+        }
+        sendToDatabase(values)
+      }
+
+      async function sendToDatabase(values) {
+        resp = await fetch("/units", {
+          method:"PUT",
+          headers:{'Content-Type': 'application/json' },
+          body: JSON.stringify({values})
+        })
+        .then((resp) => {
+          location.href = resp.url
+        })
       }
 
       makeDropdown(buildingIds, "buildings")
