--- a/templates/unitsNew.html
+++ b/templates/unitsNew.html
@@ -3,6 +3,7 @@
     <h2> Add New Unit </h2>
     <table id=datatable>
       <thead>
+        <th>Unit Number</th>
         <th>Price</th>
         <th>Rented</th>
         <th>Note</th>
@@ -10,7 +11,8 @@
         <th>UnitTypeID</th>
       </thead>
       <tbody>
-        <tr>
+        <tr id="newrow">
+          <td contenteditable="true"></td>
           <td contenteditable="true"></td>
           <td contenteditable="true"></td>
           <td contenteditable="true"></td>
@@ -19,7 +21,7 @@
         </tr>
       </tbody>
     </table>
-    <button> Add Row </button>
+    <button onclick="addRow()"> Add Row </button>
     <script>
       let buildingIds = {{buildings | safe}}
       let typesIds = {{types | safe}}
@@ -31,12 +33,36 @@
           for (let cell of row) {
             text = text + cell + " "
           }
-          console.log(text)
           drop = document.createElement("option")
           drop.setAttribute("value", row[0])
           drop.innerText = text
           dropdown.appendChild(drop)
         }
+      }
+
+      function addRow(){
+        const row = document.getElementById("newrow")
+        let i = 0
+        let values = []
+        for (let cell of row.cells) {
+          if (cell.className === "dropcell" || cell.className === "datecell"){
+            values.push(cell.childNodes[1].value)
+          }
+          else {values.push(cell.innerText)}
+          i += 1
+        }
+        addToDatabase(values)
+      }
+
+      async function addToDatabase(values) {
+        resp = await fetch("/units", {
+          method:"POST",
+          headers:{'Content-Type': 'application/json' },
+          body: JSON.stringify({values})
+        })
+        .then((resp) => {
+          location.href = resp.url
+        })
       }
 
       makeDropdown(buildingIds, "buildings")
