--- a/templates/maintenanceEdit.html
+++ b/templates/maintenanceEdit.html
@@ -27,7 +27,7 @@
     let tenantIds = {{tenants | safe}}
     let unitIds = {{units | safe }}
 
-    function makeDropdown(list, id){
+    function makeDropdown(list, id, nullable){
       dropdown = document.getElementById(id)
       for (let row of list) {
         let text = ""
@@ -37,6 +37,12 @@
         drop = document.createElement("option")
         drop.setAttribute("value", row[0])
         drop.innerText = text
+        dropdown.appendChild(drop)
+      }
+      if (nullable === 1){
+        drop = document.createElement("option")
+        drop.setAttribute("value", "NULL")
+        drop.innerText = "None"
         dropdown.appendChild(drop)
       }
     }
@@ -80,8 +86,8 @@
       })
     }
 
-    makeDropdown(tenantIds, "tenants")
-    makeDropdown(unitIds, "units")
+    makeDropdown(tenantIds, "tenants", 1)
+    makeDropdown(unitIds, "units", 0)
     init()
 
     </script>
