--- a/templates/paymentsNew.html
+++ b/templates/paymentsNew.html
@@ -22,7 +22,7 @@
       let tenantIds = {{tenants | safe}}
       let unitIds = {{units | safe}}
 
-      function makeDropdown(list, id){
+      function makeDropdown(list, id, nullable){
         dropdown = document.getElementById(id)
         for (let row of list) {
           let text = ""
@@ -32,6 +32,12 @@
           drop = document.createElement("option")
           drop.setAttribute("value", row[0])
           drop.innerText = text
+          dropdown.appendChild(drop)
+        }
+        if (nullable === 1){
+          drop = document.createElement("option")
+          drop.setAttribute("value", "NULL")
+          drop.innerText = "None"
           dropdown.appendChild(drop)
         }
       }
@@ -61,7 +67,7 @@
         })
       }
 
-      makeDropdown(unitIds, "units")
-      makeDropdown(tenantIds, "tenants")
+      makeDropdown(unitIds, "units", 1)
+      makeDropdown(tenantIds, "tenants", 0)
     </script>
   {% endblock %}
