--- a/templates/tenantinformation.html
+++ b/templates/tenantinformation.html
@@ -1,6 +1,6 @@
 {% extends 'base.html'%}
   {% block content %}
-    <h2> Tenant Information </h2>
+    <h2> Private Tenant Information </h2>
     <table id=datatable>
       <thead>
         <th>TenantID</th>
