--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
     <p>Click on any of the links above to view and edit your apartment's data.</p>
     <h4> OR </h4>
     <p>Search for tenant information by name.</p>
-    <div class="inputblock">
+    <div class="inputblock" style="margin-top:10px">
       <div class="inputrow">
         <label>First Name:</label>
         <input type="text" id="first_name" value="">
