--- a/static/style.css
+++ b/static/style.css
@@ -101,7 +101,7 @@ table{
   min-width: 80%;
   margin-left: auto;
   margin-right: auto;
-  border-collapse: collapse;;
+  border-collapse: collapse;
 }
 
 td, th{
